# materials_modeling

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PREPROCESSING_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  get_root_path.py  main.py  pyproject.toml  requirements.txt  result_models.json  run.py  test_project.py
data_loader/: __init__.py  download.py  preprocess.py
models/: __init__.py
models/cgcnn/: best_model.pth  final_model.pth  predict.py  training_history.json
models/megnet/: best_model.pth  model.py  predict.py  train.py
models/mpnn/: best_model.pth  model.py  predict.py  train.py
models/schnet/: best_model.pth  model.py  predict.py  train.py
settings/materials/: predict_material.yaml  selection_materials.yaml
settings/materialsproject_api/: token.env
settings/models/: hyperparameter_limits.yaml  models.yaml
settings/preprocessing_data_training/: data_preprocessing.yaml
src/: __init__.py  app.py  config.py  data_checker.py  data_preprocessing.py  get_data.py  logging_setup.py  predict_models.py  results_manager.py  train_validate_models.py
src/loading_data/: __init__.py  download.py
src/models/: __init__.py  hpo.py
src/models/cgcnn/: __init__.py  model.py  predict.py  train.py
src/models/megnet/: __init__.py  model.py  predict.py  train.py
src/models/mpnn/: __init__.py  model.py  predict.py  train.py
src/models/schnet/: __init__.py  model.py  predict.py  train.py
src/utils/: __init__.py  metrics.py  seed_manager.py
tests/: __init__.py  test_pipeline.py
