[project]
name = "multiscale-materials-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pyaml>=25.7.0",
    "pymatgen>=2025.6.14",
    "torch-geometric>=2.6.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
